import * as path from 'path'
import {/* ExtractedMessageDescriptor, */ transform, Options} from './transform'

// NOTE: the test fixtures are located in babel-plugin-formatjs package.
// They are copied over by Bazel as one of the test dependencies.
export function transformAndCheck(
  fn: string,
  opts: Options = {},
  transformOptions?: any
) {
  const filePath = path.join(__dirname, 'fixtures', `${fn}.js`)
  const {code} = transform(filePath, transformOptions, opts)

  const [ret, comments] = code.split('/*__formatjs__messages_extracted__::')
  const data = JSON.parse(comments.substring(0, comments.indexOf('*/')))

  return {
    data,
    code: ret?.trim(),
  }
}

describe.each([
  ['explicit pragma', {pragma: '@react-intl'}],
  ['no pragma', {}],
])('%s', (_, pluginOptions) => {
  test('additionalComponentNames', function () {
    expect(
      transformAndCheck('additionalComponentNames', {
        ...pluginOptions,
        additionalComponentNames: ['CustomMessage'],
      })
    ).toMatchSnapshot()
  })

  test('additionalFunctionNames', function () {
    expect(
      transformAndCheck('additionalFunctionNames', {
        ...pluginOptions,
        additionalFunctionNames: ['t'],
      })
    ).toMatchSnapshot()
  })

  test('ast', function () {
    expect(
      transformAndCheck('ast', {
        ...pluginOptions,
        ast: true,
      })
    ).toMatchSnapshot()
  })

  test('defineMessage', function () {
    expect(transformAndCheck('defineMessage', pluginOptions)).toMatchSnapshot()
  })

  test('descriptionsAsObjects', function () {
    expect(
      transformAndCheck('descriptionsAsObjects', pluginOptions)
    ).toMatchSnapshot()
  })

  test('defineMessages', function () {
    expect(transformAndCheck('defineMessages', pluginOptions)).toMatchSnapshot()
  })
  test('empty', function () {
    expect(transformAndCheck('empty', pluginOptions)).toMatchSnapshot()
  })
  test('extractFromFormatMessageCall', function () {
    expect(
      transformAndCheck('extractFromFormatMessageCall', pluginOptions)
    ).toMatchSnapshot()
  })
  test('extractFromFormatMessageCallStateless', function () {
    expect(
      transformAndCheck('extractFromFormatMessageCallStateless', pluginOptions)
    ).toMatchSnapshot()
  })
  test('formatMessageCall', function () {
    expect(
      transformAndCheck('formatMessageCall', pluginOptions)
    ).toMatchSnapshot()
  })
  test('FormattedMessage', function () {
    expect(
      transformAndCheck('FormattedMessage', pluginOptions)
    ).toMatchSnapshot()
  })
  test('inline', function () {
    expect(transformAndCheck('inline', pluginOptions)).toMatchSnapshot()
  })
  test('templateLiteral', function () {
    expect(
      transformAndCheck('templateLiteral', pluginOptions)
    ).toMatchSnapshot()
  })

  // NOT FULLY IMPLEMENTED
  test.skip('idInterpolationPattern', function () {
    expect(
      transformAndCheck('idInterpolationPattern', {
        ...pluginOptions,
        idInterpolationPattern: '[folder].[name].[sha512:contenthash:hex:6]',
      })
    ).toMatchSnapshot()
  })

  test('idInterpolationPattern default', function () {
    expect(
      transformAndCheck('idInterpolationPattern', pluginOptions)
    ).toMatchSnapshot()
  })

  test('GH #2663', function () {
    expect(
      transformAndCheck('2663', pluginOptions, {
        jsc: {
          target: 'es5',
        },
      })
    ).toMatchSnapshot()
  })

  // UNSUPPORTED
  test.skip('overrideIdFn', function () {
    expect(
      transformAndCheck('overrideIdFn', {
        ...pluginOptions,
        overrideIdFn: (
          id?: string,
          defaultMessage?: string,
          description?: string,
          filePath?: string
        ) => {
          const filename = path.basename(filePath!)
          return `${filename}.${id}.${
            defaultMessage!.length
          }.${typeof description}`
        },
      })
    ).toMatchSnapshot()
  })

  test('removeDefaultMessage', function () {
    expect(
      transformAndCheck('removeDefaultMessage', {
        ...pluginOptions,
        removeDefaultMessage: true,
      })
    ).toMatchSnapshot()
  })

  // UNSUPPORTED
  test.skip('removeDefaultMessage + overrideIdFn', function () {
    expect(
      transformAndCheck('removeDefaultMessage', {
        ...pluginOptions,
        removeDefaultMessage: true,
        overrideIdFn: (
          id?: string,
          defaultMessage?: string,
          description?: string,
          filePath?: string
        ) => {
          const filename = path.basename(filePath!)
          return `${filename}.${id}.${
            defaultMessage!.length
          }.${typeof description}`
        },
      })
    ).toMatchSnapshot()
  })
  test('preserveWhitespace', function () {
    expect(
      transformAndCheck('preserveWhitespace', {
        ...pluginOptions,
        preserveWhitespace: true,
      })
    ).toMatchSnapshot()
  })

  test('extractSourceLocation', function () {
    const {data, code} = transformAndCheck('extractSourceLocation', {
      ...pluginOptions,
      extractSourceLocation: true,
    })

    expect(code).toMatchSnapshot()

    expect(data).toEqual({
      messages: [
        {
          defaultMessage: 'Hello World!',
          id: 'foo.bar.baz',
          loc: {
            end: {
              col: 78,
              line: 6,
            },
            file: path.join(__dirname, 'fixtures/extractSourceLocation.js'),
            start: {
              col: 11,
              line: 6,
            },
          },
        },
      ],
      meta: {},
    })
  })

  test('Properly throws parse errors', () => {
    expect(() => transformAndCheck('icuSyntax', pluginOptions)).toThrow(
      'SyntaxError: MALFORMED_ARGUMENT'
    )
  })

  test('skipExtractionFormattedMessage', function () {
    expect(
      transformAndCheck('skipExtractionFormattedMessage', pluginOptions)
    ).toMatchSnapshot()
  })

  // See: https://github.com/formatjs/formatjs/issues/3589#issuecomment-1532461569
  test('jsxNestedInCallExpr', () => {
    expect(
      transformAndCheck('jsxNestedInCallExpr', pluginOptions)
    ).toMatchSnapshot()
  })
})
