// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`explicit pragma FormattedMessage 1`] = `
{
  "code": "import React, { Component } from 'react';
import { FormattedMessage } from 'react-intl';
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "foo.bar.baz",
            defaultMessage: "Hello World!"
        });
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message.",
        "id": "foo.bar.baz",
      },
    ],
    "meta": {},
  },
}
`;

exports[`explicit pragma GH #2663 1`] = `
{
  "code": "import { _ as _async_to_generator } from "@swc/helpers/_/_async_to_generator";
import { _ as _ts_generator } from "@swc/helpers/_/_ts_generator";
function error1() {
    return _error1.apply(this, arguments);
}
function _error1() {
    _error1 = _async_to_generator(function() {
        return _ts_generator(this, function(_state) {
            switch(_state.label){
                case 0:
                    return [
                        4,
                        intl.formatMessage({
                            id: "dI+HS6",
                            defaultMessage: "foo"
                        })
                    ];
                case 1:
                    _state.sent();
                    return [
                        2
                    ];
            }
        });
    }",
  "data": {
    "messages": [
      {
        "defaultMessage": "foo",
        "description": "foo",
        "id": "dI+HS6",
      },
    ],
    "meta": {},
  },
}
`;

exports[`explicit pragma additionalComponentNames 1`] = `
{
  "code": "import React, { Component } from 'react';
function CustomMessage() {}
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement(CustomMessage, {
            id: "greeting-world",
            defaultMessage: "Hello World!"
        });
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "Greeting to the world",
        "id": "greeting-world",
      },
    ],
    "meta": {},
  },
}
`;

exports[`explicit pragma additionalFunctionNames 1`] = `
{
  "code": "// @react-intl project:foo
import React, { Component } from 'react';
function CustomMessage() {}
export default class Foo extends Component {
    render() {
        t({
            id: "mfl9RV",
            defaultMessage: "t"
        });
        return /*#__PURE__*/ React.createElement(CustomMessage, {
            id: formatMessage({
                id: "9/u6bg",
                defaultMessage: "foo"
            }),
            description: $formatMessage({
                id: "3jMyCE",
                defaultMessage: "foo2"
            }),
            defaultMessage: "Hello World!"
        });
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "t",
        "id": "mfl9RV",
      },
      {
        "defaultMessage": "foo",
        "id": "9/u6bg",
      },
      {
        "defaultMessage": "foo2",
        "id": "3jMyCE",
      },
    ],
    "meta": {
      "project": "foo",
    },
  },
}
`;

exports[`explicit pragma ast 1`] = `
{
  "code": "import React, { Component } from 'react';
import { FormattedMessage, defineMessage, defineMessages } from 'react-intl';
defineMessage({
    id: 'defineMessage',
    defaultMessage: [
        {
            type: 0,
            value: "this is a "
        },
        {
            style: "full",
            type: 3,
            value: "dt"
        }
    ]
});
defineMessages({
    foo: {
        id: 'defineMessages1',
        defaultMessage: [
            {
                type: 0,
                value: "this is a "
            },
            {
                style: "full",
                type: 4,
                value: "dt"
            }
        ]
    },
    bar: {
        id: 'defineMessages2',
        defaultMessage: [
            {
                type: 0,
                value: "this is a "
            },
            {
                style: null,
                type: 2,
                value: "dt"
            }
        ]
    },
    baz: {
        id: 'compiled',
        defaultMessage: [
            {
                type: 0,
                value: 'asd'
            }
        ]
    }
});
export default class Foo extends Component {
    render() {
        Intl.formatMessage({
            id: 'intl.formatMessage',
            defaultMessage: [
                {
                    type: 0,
                    value: "foo "
                },
                {
                    offset: 0,
                    options: {
                        one: {
                            value: [
                                {
                                    type: 0,
                                    value: "1"
                                }
                            ]
                        },
                        other: {
                            value: [
                                {
                                    type: 0,
                                    value: "2"
                                }
                            ]
                        }
                    },
                    pluralType: "cardinal",
                    type: 6,
                    value: "s"
                }
            ]
        });
        return /*#__PURE__*/ React.createElement(React.Fragment, null, /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "foo.bar.baz",
            defaultMessage: "Hello World!"
        }), /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "compiled2",
            defaultMessage: [
                {
                    type: 0,
                    value: 'compiled comp'
                }
            ]
        }));
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "this is a {dt, date, full}",
        "id": "defineMessage",
      },
      {
        "defaultMessage": "this is a {dt, time, full}",
        "id": "defineMessages1",
      },
      {
        "defaultMessage": "this is a {dt, number}",
        "id": "defineMessages2",
      },
      {
        "defaultMessage": "foo {s, plural, one{1} other{2}}",
        "id": "intl.formatMessage",
      },
      {
        "defaultMessage": "Hello World!",
        "description": "The default message.",
        "id": "foo.bar.baz",
      },
      {
        "defaultMessage": "",
        "description": "The default message.",
        "id": "compiled2",
      },
    ],
    "meta": {},
  },
}
`;

exports[`explicit pragma defineMessage 1`] = `
{
  "code": "// @react-intl project:amazing
import React, { Component } from 'react';
import { defineMessage, FormattedMessage } from 'react-intl';
const msgs = {
    header: defineMessage({
        id: 'foo.bar.baz',
        defaultMessage: "Hello World!"
    }),
    content: defineMessage({
        id: 'foo.bar.biff',
        defaultMessage: "Hello Nurse!"
    }),
    kittens: defineMessage({
        id: 'app.home.kittens',
        defaultMessage: "{count, plural, =0 {😭} one {# kitten} other {# kittens}}"
    }),
    trailingWhitespace: defineMessage({
        id: 'trailing.ws',
        defaultMessage: "Some whitespace"
    }),
    escaped: defineMessage({
        id: 'escaped.apostrophe',
        defaultMessage: "A quoted value ''{value}'"
    }),
    stringKeys: defineMessage({
        // prettier-ignore
        'id': 'string.key.id',
        // prettier-ignore
        'defaultMessage': "This is message"
    })
};
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement("div", null, /*#__PURE__*/ React.createElement("h1", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.header)), /*#__PURE__*/ React.createElement("p", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.content)), /*#__PURE__*/ React.createElement("p", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.kittens)));
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "foo.bar.baz",
      },
      {
        "defaultMessage": "Hello Nurse!",
        "description": "Another message",
        "id": "foo.bar.biff",
      },
      {
        "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
        "description": "Counts kittens",
        "id": "app.home.kittens",
      },
      {
        "defaultMessage": "Some whitespace",
        "description": "Whitespace",
        "id": "trailing.ws",
      },
      {
        "defaultMessage": "A quoted value ''{value}'",
        "description": "Escaped apostrophe",
        "id": "escaped.apostrophe",
      },
      {
        "defaultMessage": "This is message",
        "description": "Keys as a string literal",
        "id": "string.key.id",
      },
    ],
    "meta": {
      "project": "amazing",
    },
  },
}
`;

exports[`explicit pragma defineMessages 1`] = `
{
  "code": "// @react-intl project:amazing
import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
const msgs = defineMessages({
    header: {
        id: 'foo.bar.baz',
        defaultMessage: "Hello World!"
    },
    content: {
        id: 'foo.bar.biff',
        defaultMessage: "Hello Nurse!"
    },
    kittens: {
        id: 'app.home.kittens',
        defaultMessage: "{count, plural, =0 {😭} one {# kitten} other {# kittens}}"
    },
    trailingWhitespace: {
        id: 'trailing.ws',
        defaultMessage: "Some whitespace"
    },
    escaped: {
        id: 'escaped.apostrophe',
        defaultMessage: "A quoted value ''{value}'"
    }
});
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement("div", null, /*#__PURE__*/ React.createElement("h1", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.header)), /*#__PURE__*/ React.createElement("p", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.content)), /*#__PURE__*/ React.createElement("p", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.kittens)));
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "foo.bar.baz",
      },
      {
        "defaultMessage": "Hello Nurse!",
        "description": "Another message",
        "id": "foo.bar.biff",
      },
      {
        "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
        "description": "Counts kittens",
        "id": "app.home.kittens",
      },
      {
        "defaultMessage": "Some whitespace",
        "description": "Whitespace",
        "id": "trailing.ws",
      },
      {
        "defaultMessage": "A quoted value ''{value}'",
        "description": "Escaped apostrophe",
        "id": "escaped.apostrophe",
      },
    ],
    "meta": {
      "project": "amazing",
    },
  },
}
`;

exports[`explicit pragma descriptionsAsObjects 1`] = `
{
  "code": "import React, { Component } from 'react';
import { FormattedMessage } from 'react-intl';
// @react-intl project:amazing2
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "foo.bar.baz",
            defaultMessage: "Hello World!"
        });
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": {
          "metadata": "Additional metadata content.",
          "text": "Something for the translator.",
        },
        "id": "foo.bar.baz",
      },
    ],
    "meta": {
      "project": "amazing2",
    },
  },
}
`;

exports[`explicit pragma empty 1`] = `
{
  "code": "import React, { Component } from 'react';
import { defineMessage } from 'react-intl';
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement("div", null);
    }
}",
  "data": {
    "messages": [],
    "meta": {},
  },
}
`;

exports[`explicit pragma extractFromFormatMessageCall 1`] = `
{
  "code": "import { FormattedMessage, injectIntl } from 'react-intl';
import React, { Component } from 'react';
const objectPointer = {
    id: 'foo.bar.invalid',
    defaultMessage: 'This cannot be extracted',
    description: 'the plugin only supports inline objects'
};
class Foo extends Component {
    render() {
        const { intl  } = this.props;
        const { intl: { formatMessage  }  } = this.props;
        const msgs = {
            baz: this.props.intl.formatMessage({
                id: 'foo.bar.baz',
                defaultMessage: "Hello World!"
            }),
            biff: intl.formatMessage({
                id: 'foo.bar.biff',
                defaultMessage: "Hello Nurse!"
            }),
            qux: formatMessage({
                id: 'foo.bar.qux',
                defaultMessage: "Hello Stranger!"
            }),
            invalid: this.props.intl.formatMessage(objectPointer)
        };
        return /*#__PURE__*/ React.createElement("div", null, /*#__PURE__*/ React.createElement("h1", null, msgs.header), /*#__PURE__*/ React.createElement("p", null, msgs.content), /*#__PURE__*/ React.createElement("span", null, /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "foo",
            defaultMessage: "bar"
        })));
    }
}
export default injectIntl(Foo)",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "foo.bar.baz",
      },
      {
        "defaultMessage": "Hello Nurse!",
        "description": "Another message",
        "id": "foo.bar.biff",
      },
      {
        "defaultMessage": "Hello Stranger!",
        "description": "A different message",
        "id": "foo.bar.qux",
      },
      {
        "defaultMessage": "bar",
        "description": "baz",
        "id": "foo",
      },
    ],
    "meta": {},
  },
}
`;

exports[`explicit pragma extractFromFormatMessageCallStateless 1`] = `
{
  "code": "import { FormattedMessage, injectIntl, useIntl } from 'react-intl';
import React from 'react';
function myFunction(param1, { formatMessage , formatDate  }) {
    return formatMessage({
        id: 'inline1',
        defaultMessage: "Hello params!"
    }) + formatDate(new Date());
}
const child = myFunction(filterable, intl);
function SFC() {
    const { formatMessage  } = useIntl();
    return formatMessage({
        id: 'hook',
        defaultMessage: "hook <b>foo</b>"
    });
}
const Foo = ({ intl: { formatMessage  }  })=>{
    const msgs = {
        qux: formatMessage({
            id: 'foo.bar.quux',
            defaultMessage: "Hello <b>Stateless!</b>"
        })
    };
    return /*#__PURE__*/ React.createElement("div", null, /*#__PURE__*/ React.createElement("h1", null, msgs.header), /*#__PURE__*/ React.createElement("p", null, msgs.content), /*#__PURE__*/ React.createElement("span", null, /*#__PURE__*/ React.createElement(FormattedMessage, {
        id: "foo",
        defaultMessage: "bar"
    })));
};
export default injectIntl(Foo)",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello params!",
        "description": "A stateless message",
        "id": "inline1",
      },
      {
        "defaultMessage": "hook <b>foo</b>",
        "description": "hook",
        "id": "hook",
      },
      {
        "defaultMessage": "Hello <b>Stateless!</b>",
        "description": "A stateless message",
        "id": "foo.bar.quux",
      },
      {
        "defaultMessage": "bar",
        "description": "baz",
        "id": "foo",
      },
    ],
    "meta": {},
  },
}
`;

exports[`explicit pragma extractSourceLocation 1`] = `
"import React, { Component } from 'react';
import { FormattedMessage } from 'react-intl';
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "foo.bar.baz",
            defaultMessage: "Hello World!"
        });
    }
}"
`;

exports[`explicit pragma formatMessageCall 1`] = `
{
  "code": "import React, { Component } from 'react';
import { injectIntl, FormattedMessage } from 'react-intl';
const objectPointer = {
    id: 'foo.bar.invalid',
    defaultMessage: 'This cannot be extracted',
    description: 'the plugin only supports inline objects'
};
class Foo extends Component {
    render() {
        const msgs = {
            baz: this.props.intl.formatMessage({
                id: 'foo.bar.baz',
                defaultMessage: "Hello World!"
            }),
            biff: this.props.intl.formatMessage({
                id: 'foo.bar.biff',
                defaultMessage: "Hello Nurse!"
            }),
            invalid: this.props.intl.formatMessage(objectPointer)
        };
        return /*#__PURE__*/ React.createElement("div", null, /*#__PURE__*/ React.createElement("h1", null, msgs.header), /*#__PURE__*/ React.createElement("p", null, msgs.content), /*#__PURE__*/ React.createElement("span", null, /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "foo",
            defaultMessage: "bar"
        })));
    }
}
export default injectIntl(Foo)",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "foo.bar.baz",
      },
      {
        "defaultMessage": "Hello Nurse!",
        "description": "Another message",
        "id": "foo.bar.biff",
      },
      {
        "defaultMessage": "bar",
        "description": "baz",
        "id": "foo",
      },
    ],
    "meta": {},
  },
}
`;

exports[`explicit pragma idInterpolationPattern default 1`] = `
{
  "code": "import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
const msgs = defineMessages({
    header: {
        id: "TRRgnX",
        defaultMessage: "Hello World!"
    },
    content: {
        id: 'foo.bar.biff',
        defaultMessage: "Hello Nurse!"
    }
});
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement("div", null, /*#__PURE__*/ React.createElement("h1", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.header)), /*#__PURE__*/ React.createElement("p", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.content)), /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "NqjIBK",
            defaultMessage: "Hello World!"
        }), /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "XOhkQy",
            defaultMessage: "NO ID"
        }));
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "TRRgnX",
      },
      {
        "defaultMessage": "Hello Nurse!",
        "description": {
          "metadata": "Additional metadata content.",
          "text": "Something for the translator.",
        },
        "id": "foo.bar.biff",
      },
      {
        "defaultMessage": "Hello World!",
        "description": "Something for the translator. Another description",
        "id": "NqjIBK",
      },
      {
        "defaultMessage": "NO ID",
        "description": "Something for the translator. Another description",
        "id": "XOhkQy",
      },
    ],
    "meta": {},
  },
}
`;

exports[`explicit pragma inline 1`] = `
{
  "code": "import React, { Component } from 'react';
import { FormattedMessage, defineMessage } from 'react-intl';
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement("div", null, /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "foo.bar.baz",
            defaultMessage: "Hello World!"
        }), defineMessage({
            id: 'header',
            defaultMessage: "Hello World!"
        }), defineMessage({
            id: 'header2',
            defaultMessage: "Hello World!"
        }));
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message.",
        "id": "foo.bar.baz",
      },
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "header",
      },
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "header2",
      },
    ],
    "meta": {},
  },
}
`;

exports[`explicit pragma jsxNestedInCallExpr 1`] = `
{
  "code": "import { useMemo } from 'react';
import { FormattedMessage, FormattedNumber, useIntl } from 'react-intl';
export default function IndexPage() {
    const intl = useIntl();
    const anotherMessage = useMemo(()=>/*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "A+bpLt",
            defaultMessage: "Hello, World #1!"
        }), []);
    return /*#__PURE__*/ React.createElement("main", {
        title: intl.formatMessage({
            id: "lyiQWH",
            defaultMessage: "Home"
        }),
        description: intl.formatMessage({
            id: "9CBSZS",
            defaultMessage: "An example app integrating React Intl with Next.js"
        })
    }, /*#__PURE__*/ React.createElement("p", null, /*#__PURE__*/ React.createElement(FormattedMessage, {
        id: "wF8i0k",
        defaultMessage: "Hello, World #2!"
    })), /*#__PURE__*/ React.createElement("p", null, anotherMessage), /*#__PURE__*/ React.createElement("div", null, [
        ...Array(10)
    ].map((_, i)=>/*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "rpH0bU",
            defaultMessage: "Hello, World #3!"
        }))), /*#__PURE__*/ React.createElement("p", null, /*#__PURE__*/ React.createElement(FormattedNumber, {
        value: 1000
    })));
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello, World #1!",
        "description": "Index Page: Content #1",
        "id": "A+bpLt",
      },
      {
        "defaultMessage": "Home",
        "description": "Index Page: document title",
        "id": "lyiQWH",
      },
      {
        "defaultMessage": "An example app integrating React Intl with Next.js",
        "description": "Index Page: Meta Description",
        "id": "9CBSZS",
      },
      {
        "defaultMessage": "Hello, World #2!",
        "description": "Index Page: Content #2",
        "id": "wF8i0k",
      },
      {
        "defaultMessage": "Hello, World #3!",
        "description": "Index Page: Content #3",
        "id": "rpH0bU",
      },
    ],
    "meta": {},
  },
}
`;

exports[`explicit pragma preserveWhitespace 1`] = `
{
  "code": "// @react-intl project:amazing
import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
const msgs = defineMessages({
    header: {
        id: 'foo.bar.baz',
        defaultMessage: "Hello World!"
    },
    content: {
        id: 'foo.bar.biff',
        defaultMessage: "Hello Nurse!"
    },
    kittens: {
        id: 'app.home.kittens',
        defaultMessage: "{count, plural, =0 {😭} one {# kitten} other {# kittens}}"
    },
    trailingWhitespace: {
        id: 'trailing.ws',
        defaultMessage: "   Some whitespace   "
    },
    escaped: {
        id: 'escaped.apostrophe',
        defaultMessage: "A quoted value ''{value}'"
    },
    newline: {
        id: 'newline',
        defaultMessage: "this is     a message"
    },
    linebreak: {
        id: 'linebreak',
        defaultMessage: "this is\\na message"
    },
    templateLinebreak: {
        id: 'templateLinebreak',
        description: \`this is
    a
    description\`,
        defaultMessage: "this is\\n    a message"
    }
});
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement("div", null, /*#__PURE__*/ React.createElement("h1", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.header)), /*#__PURE__*/ React.createElement("p", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.content)), /*#__PURE__*/ React.createElement("p", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.kittens)), /*#__PURE__*/ React.createElement("p", null, /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "inline.linebreak",
            defaultMessage: "formatted message       with linebreak"
        })));
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "foo.bar.baz",
      },
      {
        "defaultMessage": "Hello Nurse!",
        "description": "Another message",
        "id": "foo.bar.biff",
      },
      {
        "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
        "description": "Counts kittens",
        "id": "app.home.kittens",
      },
      {
        "defaultMessage": "   Some whitespace   ",
        "description": "Whitespace",
        "id": "trailing.ws",
      },
      {
        "defaultMessage": "A quoted value ''{value}'",
        "description": "Escaped apostrophe",
        "id": "escaped.apostrophe",
      },
      {
        "defaultMessage": "this is     a message",
        "description": "this is     a     description",
        "id": "newline",
      },
      {
        "defaultMessage": "this is
a message",
        "description": "this is
a
description",
        "id": "linebreak",
      },
      {
        "defaultMessage": "this is
    a message",
        "id": "templateLinebreak",
      },
      {
        "defaultMessage": "formatted message
						with linebreak",
        "description": "foo
						bar",
        "id": "inline.linebreak",
      },
    ],
    "meta": {
      "project": "amazing",
    },
  },
}
`;

exports[`explicit pragma removeDefaultMessage 1`] = `
{
  "code": "import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
defineMessages({
    foo: {
        id: 'greeting-user'
    },
    foo2: {
        id: "xoMBqZ"
    },
    foo3: {
        id: "s0FUZ6"
    }
});
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement(React.Fragment, null, /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "greeting-world"
        }), /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "mdcDCs"
        }), /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "xjsqOM"
        }));
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello, {name}",
        "description": "Greeting the user",
        "id": "greeting-user",
      },
      {
        "defaultMessage": "foo2-msg",
        "description": "foo2",
        "id": "xoMBqZ",
      },
      {
        "defaultMessage": "foo3-msg",
        "id": "s0FUZ6",
      },
      {
        "defaultMessage": "Hello World!",
        "description": "Greeting to the world",
        "id": "greeting-world",
      },
      {
        "defaultMessage": "message with desc",
        "description": "desc with desc",
        "id": "mdcDCs",
      },
      {
        "defaultMessage": "message only",
        "id": "xjsqOM",
      },
    ],
    "meta": {},
  },
}
`;

exports[`explicit pragma skipExtractionFormattedMessage 1`] = `
{
  "code": "import React, { Component } from 'react';
import { FormattedMessage } from 'react-intl';
function nonStaticId() {
    return 'baz';
}
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: \`foo.bar.\${nonStaticId()}\`
        });
    }
}",
  "data": {
    "messages": [],
    "meta": {},
  },
}
`;

exports[`explicit pragma templateLiteral 1`] = `
{
  "code": "import React, { Component } from 'react';
import { FormattedMessage, defineMessage } from 'react-intl';
defineMessage({
    id: \`template\`,
    defaultMessage: "should remove newline and extra spaces"
});
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "foo.bar.baz",
            defaultMessage: \`Hello World!\`
        });
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "should remove newline and extra spaces",
        "id": "template",
      },
      {
        "defaultMessage": "Hello World!",
        "description": "The default message.",
        "id": "foo.bar.baz",
      },
    ],
    "meta": {},
  },
}
`;

exports[`no pragma FormattedMessage 1`] = `
{
  "code": "import React, { Component } from 'react';
import { FormattedMessage } from 'react-intl';
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "foo.bar.baz",
            defaultMessage: "Hello World!"
        });
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message.",
        "id": "foo.bar.baz",
      },
    ],
    "meta": {},
  },
}
`;

exports[`no pragma GH #2663 1`] = `
{
  "code": "import { _ as _async_to_generator } from "@swc/helpers/_/_async_to_generator";
import { _ as _ts_generator } from "@swc/helpers/_/_ts_generator";
function error1() {
    return _error1.apply(this, arguments);
}
function _error1() {
    _error1 = _async_to_generator(function() {
        return _ts_generator(this, function(_state) {
            switch(_state.label){
                case 0:
                    return [
                        4,
                        intl.formatMessage({
                            id: "dI+HS6",
                            defaultMessage: "foo"
                        })
                    ];
                case 1:
                    _state.sent();
                    return [
                        2
                    ];
            }
        });
    }",
  "data": {
    "messages": [
      {
        "defaultMessage": "foo",
        "description": "foo",
        "id": "dI+HS6",
      },
    ],
    "meta": {},
  },
}
`;

exports[`no pragma additionalComponentNames 1`] = `
{
  "code": "import React, { Component } from 'react';
function CustomMessage() {}
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement(CustomMessage, {
            id: "greeting-world",
            defaultMessage: "Hello World!"
        });
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "Greeting to the world",
        "id": "greeting-world",
      },
    ],
    "meta": {},
  },
}
`;

exports[`no pragma additionalFunctionNames 1`] = `
{
  "code": "// @react-intl project:foo
import React, { Component } from 'react';
function CustomMessage() {}
export default class Foo extends Component {
    render() {
        t({
            id: "mfl9RV",
            defaultMessage: "t"
        });
        return /*#__PURE__*/ React.createElement(CustomMessage, {
            id: formatMessage({
                id: "9/u6bg",
                defaultMessage: "foo"
            }),
            description: $formatMessage({
                id: "3jMyCE",
                defaultMessage: "foo2"
            }),
            defaultMessage: "Hello World!"
        });
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "t",
        "id": "mfl9RV",
      },
      {
        "defaultMessage": "foo",
        "id": "9/u6bg",
      },
      {
        "defaultMessage": "foo2",
        "id": "3jMyCE",
      },
    ],
    "meta": {},
  },
}
`;

exports[`no pragma ast 1`] = `
{
  "code": "import React, { Component } from 'react';
import { FormattedMessage, defineMessage, defineMessages } from 'react-intl';
defineMessage({
    id: 'defineMessage',
    defaultMessage: [
        {
            type: 0,
            value: "this is a "
        },
        {
            style: "full",
            type: 3,
            value: "dt"
        }
    ]
});
defineMessages({
    foo: {
        id: 'defineMessages1',
        defaultMessage: [
            {
                type: 0,
                value: "this is a "
            },
            {
                style: "full",
                type: 4,
                value: "dt"
            }
        ]
    },
    bar: {
        id: 'defineMessages2',
        defaultMessage: [
            {
                type: 0,
                value: "this is a "
            },
            {
                style: null,
                type: 2,
                value: "dt"
            }
        ]
    },
    baz: {
        id: 'compiled',
        defaultMessage: [
            {
                type: 0,
                value: 'asd'
            }
        ]
    }
});
export default class Foo extends Component {
    render() {
        Intl.formatMessage({
            id: 'intl.formatMessage',
            defaultMessage: [
                {
                    type: 0,
                    value: "foo "
                },
                {
                    offset: 0,
                    options: {
                        one: {
                            value: [
                                {
                                    type: 0,
                                    value: "1"
                                }
                            ]
                        },
                        other: {
                            value: [
                                {
                                    type: 0,
                                    value: "2"
                                }
                            ]
                        }
                    },
                    pluralType: "cardinal",
                    type: 6,
                    value: "s"
                }
            ]
        });
        return /*#__PURE__*/ React.createElement(React.Fragment, null, /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "foo.bar.baz",
            defaultMessage: "Hello World!"
        }), /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "compiled2",
            defaultMessage: [
                {
                    type: 0,
                    value: 'compiled comp'
                }
            ]
        }));
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "this is a {dt, date, full}",
        "id": "defineMessage",
      },
      {
        "defaultMessage": "this is a {dt, time, full}",
        "id": "defineMessages1",
      },
      {
        "defaultMessage": "this is a {dt, number}",
        "id": "defineMessages2",
      },
      {
        "defaultMessage": "foo {s, plural, one{1} other{2}}",
        "id": "intl.formatMessage",
      },
      {
        "defaultMessage": "Hello World!",
        "description": "The default message.",
        "id": "foo.bar.baz",
      },
      {
        "defaultMessage": "",
        "description": "The default message.",
        "id": "compiled2",
      },
    ],
    "meta": {},
  },
}
`;

exports[`no pragma defineMessage 1`] = `
{
  "code": "// @react-intl project:amazing
import React, { Component } from 'react';
import { defineMessage, FormattedMessage } from 'react-intl';
const msgs = {
    header: defineMessage({
        id: 'foo.bar.baz',
        defaultMessage: "Hello World!"
    }),
    content: defineMessage({
        id: 'foo.bar.biff',
        defaultMessage: "Hello Nurse!"
    }),
    kittens: defineMessage({
        id: 'app.home.kittens',
        defaultMessage: "{count, plural, =0 {😭} one {# kitten} other {# kittens}}"
    }),
    trailingWhitespace: defineMessage({
        id: 'trailing.ws',
        defaultMessage: "Some whitespace"
    }),
    escaped: defineMessage({
        id: 'escaped.apostrophe',
        defaultMessage: "A quoted value ''{value}'"
    }),
    stringKeys: defineMessage({
        // prettier-ignore
        'id': 'string.key.id',
        // prettier-ignore
        'defaultMessage': "This is message"
    })
};
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement("div", null, /*#__PURE__*/ React.createElement("h1", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.header)), /*#__PURE__*/ React.createElement("p", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.content)), /*#__PURE__*/ React.createElement("p", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.kittens)));
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "foo.bar.baz",
      },
      {
        "defaultMessage": "Hello Nurse!",
        "description": "Another message",
        "id": "foo.bar.biff",
      },
      {
        "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
        "description": "Counts kittens",
        "id": "app.home.kittens",
      },
      {
        "defaultMessage": "Some whitespace",
        "description": "Whitespace",
        "id": "trailing.ws",
      },
      {
        "defaultMessage": "A quoted value ''{value}'",
        "description": "Escaped apostrophe",
        "id": "escaped.apostrophe",
      },
      {
        "defaultMessage": "This is message",
        "description": "Keys as a string literal",
        "id": "string.key.id",
      },
    ],
    "meta": {},
  },
}
`;

exports[`no pragma defineMessages 1`] = `
{
  "code": "// @react-intl project:amazing
import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
const msgs = defineMessages({
    header: {
        id: 'foo.bar.baz',
        defaultMessage: "Hello World!"
    },
    content: {
        id: 'foo.bar.biff',
        defaultMessage: "Hello Nurse!"
    },
    kittens: {
        id: 'app.home.kittens',
        defaultMessage: "{count, plural, =0 {😭} one {# kitten} other {# kittens}}"
    },
    trailingWhitespace: {
        id: 'trailing.ws',
        defaultMessage: "Some whitespace"
    },
    escaped: {
        id: 'escaped.apostrophe',
        defaultMessage: "A quoted value ''{value}'"
    }
});
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement("div", null, /*#__PURE__*/ React.createElement("h1", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.header)), /*#__PURE__*/ React.createElement("p", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.content)), /*#__PURE__*/ React.createElement("p", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.kittens)));
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "foo.bar.baz",
      },
      {
        "defaultMessage": "Hello Nurse!",
        "description": "Another message",
        "id": "foo.bar.biff",
      },
      {
        "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
        "description": "Counts kittens",
        "id": "app.home.kittens",
      },
      {
        "defaultMessage": "Some whitespace",
        "description": "Whitespace",
        "id": "trailing.ws",
      },
      {
        "defaultMessage": "A quoted value ''{value}'",
        "description": "Escaped apostrophe",
        "id": "escaped.apostrophe",
      },
    ],
    "meta": {},
  },
}
`;

exports[`no pragma descriptionsAsObjects 1`] = `
{
  "code": "import React, { Component } from 'react';
import { FormattedMessage } from 'react-intl';
// @react-intl project:amazing2
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "foo.bar.baz",
            defaultMessage: "Hello World!"
        });
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": {
          "metadata": "Additional metadata content.",
          "text": "Something for the translator.",
        },
        "id": "foo.bar.baz",
      },
    ],
    "meta": {},
  },
}
`;

exports[`no pragma empty 1`] = `
{
  "code": "import React, { Component } from 'react';
import { defineMessage } from 'react-intl';
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement("div", null);
    }
}",
  "data": {
    "messages": [],
    "meta": {},
  },
}
`;

exports[`no pragma extractFromFormatMessageCall 1`] = `
{
  "code": "import { FormattedMessage, injectIntl } from 'react-intl';
import React, { Component } from 'react';
const objectPointer = {
    id: 'foo.bar.invalid',
    defaultMessage: 'This cannot be extracted',
    description: 'the plugin only supports inline objects'
};
class Foo extends Component {
    render() {
        const { intl  } = this.props;
        const { intl: { formatMessage  }  } = this.props;
        const msgs = {
            baz: this.props.intl.formatMessage({
                id: 'foo.bar.baz',
                defaultMessage: "Hello World!"
            }),
            biff: intl.formatMessage({
                id: 'foo.bar.biff',
                defaultMessage: "Hello Nurse!"
            }),
            qux: formatMessage({
                id: 'foo.bar.qux',
                defaultMessage: "Hello Stranger!"
            }),
            invalid: this.props.intl.formatMessage(objectPointer)
        };
        return /*#__PURE__*/ React.createElement("div", null, /*#__PURE__*/ React.createElement("h1", null, msgs.header), /*#__PURE__*/ React.createElement("p", null, msgs.content), /*#__PURE__*/ React.createElement("span", null, /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "foo",
            defaultMessage: "bar"
        })));
    }
}
export default injectIntl(Foo)",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "foo.bar.baz",
      },
      {
        "defaultMessage": "Hello Nurse!",
        "description": "Another message",
        "id": "foo.bar.biff",
      },
      {
        "defaultMessage": "Hello Stranger!",
        "description": "A different message",
        "id": "foo.bar.qux",
      },
      {
        "defaultMessage": "bar",
        "description": "baz",
        "id": "foo",
      },
    ],
    "meta": {},
  },
}
`;

exports[`no pragma extractFromFormatMessageCallStateless 1`] = `
{
  "code": "import { FormattedMessage, injectIntl, useIntl } from 'react-intl';
import React from 'react';
function myFunction(param1, { formatMessage , formatDate  }) {
    return formatMessage({
        id: 'inline1',
        defaultMessage: "Hello params!"
    }) + formatDate(new Date());
}
const child = myFunction(filterable, intl);
function SFC() {
    const { formatMessage  } = useIntl();
    return formatMessage({
        id: 'hook',
        defaultMessage: "hook <b>foo</b>"
    });
}
const Foo = ({ intl: { formatMessage  }  })=>{
    const msgs = {
        qux: formatMessage({
            id: 'foo.bar.quux',
            defaultMessage: "Hello <b>Stateless!</b>"
        })
    };
    return /*#__PURE__*/ React.createElement("div", null, /*#__PURE__*/ React.createElement("h1", null, msgs.header), /*#__PURE__*/ React.createElement("p", null, msgs.content), /*#__PURE__*/ React.createElement("span", null, /*#__PURE__*/ React.createElement(FormattedMessage, {
        id: "foo",
        defaultMessage: "bar"
    })));
};
export default injectIntl(Foo)",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello params!",
        "description": "A stateless message",
        "id": "inline1",
      },
      {
        "defaultMessage": "hook <b>foo</b>",
        "description": "hook",
        "id": "hook",
      },
      {
        "defaultMessage": "Hello <b>Stateless!</b>",
        "description": "A stateless message",
        "id": "foo.bar.quux",
      },
      {
        "defaultMessage": "bar",
        "description": "baz",
        "id": "foo",
      },
    ],
    "meta": {},
  },
}
`;

exports[`no pragma extractSourceLocation 1`] = `
"import React, { Component } from 'react';
import { FormattedMessage } from 'react-intl';
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "foo.bar.baz",
            defaultMessage: "Hello World!"
        });
    }
}"
`;

exports[`no pragma formatMessageCall 1`] = `
{
  "code": "import React, { Component } from 'react';
import { injectIntl, FormattedMessage } from 'react-intl';
const objectPointer = {
    id: 'foo.bar.invalid',
    defaultMessage: 'This cannot be extracted',
    description: 'the plugin only supports inline objects'
};
class Foo extends Component {
    render() {
        const msgs = {
            baz: this.props.intl.formatMessage({
                id: 'foo.bar.baz',
                defaultMessage: "Hello World!"
            }),
            biff: this.props.intl.formatMessage({
                id: 'foo.bar.biff',
                defaultMessage: "Hello Nurse!"
            }),
            invalid: this.props.intl.formatMessage(objectPointer)
        };
        return /*#__PURE__*/ React.createElement("div", null, /*#__PURE__*/ React.createElement("h1", null, msgs.header), /*#__PURE__*/ React.createElement("p", null, msgs.content), /*#__PURE__*/ React.createElement("span", null, /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "foo",
            defaultMessage: "bar"
        })));
    }
}
export default injectIntl(Foo)",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "foo.bar.baz",
      },
      {
        "defaultMessage": "Hello Nurse!",
        "description": "Another message",
        "id": "foo.bar.biff",
      },
      {
        "defaultMessage": "bar",
        "description": "baz",
        "id": "foo",
      },
    ],
    "meta": {},
  },
}
`;

exports[`no pragma idInterpolationPattern default 1`] = `
{
  "code": "import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
const msgs = defineMessages({
    header: {
        id: "TRRgnX",
        defaultMessage: "Hello World!"
    },
    content: {
        id: 'foo.bar.biff',
        defaultMessage: "Hello Nurse!"
    }
});
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement("div", null, /*#__PURE__*/ React.createElement("h1", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.header)), /*#__PURE__*/ React.createElement("p", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.content)), /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "NqjIBK",
            defaultMessage: "Hello World!"
        }), /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "XOhkQy",
            defaultMessage: "NO ID"
        }));
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "TRRgnX",
      },
      {
        "defaultMessage": "Hello Nurse!",
        "description": {
          "metadata": "Additional metadata content.",
          "text": "Something for the translator.",
        },
        "id": "foo.bar.biff",
      },
      {
        "defaultMessage": "Hello World!",
        "description": "Something for the translator. Another description",
        "id": "NqjIBK",
      },
      {
        "defaultMessage": "NO ID",
        "description": "Something for the translator. Another description",
        "id": "XOhkQy",
      },
    ],
    "meta": {},
  },
}
`;

exports[`no pragma inline 1`] = `
{
  "code": "import React, { Component } from 'react';
import { FormattedMessage, defineMessage } from 'react-intl';
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement("div", null, /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "foo.bar.baz",
            defaultMessage: "Hello World!"
        }), defineMessage({
            id: 'header',
            defaultMessage: "Hello World!"
        }), defineMessage({
            id: 'header2',
            defaultMessage: "Hello World!"
        }));
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message.",
        "id": "foo.bar.baz",
      },
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "header",
      },
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "header2",
      },
    ],
    "meta": {},
  },
}
`;

exports[`no pragma jsxNestedInCallExpr 1`] = `
{
  "code": "import { useMemo } from 'react';
import { FormattedMessage, FormattedNumber, useIntl } from 'react-intl';
export default function IndexPage() {
    const intl = useIntl();
    const anotherMessage = useMemo(()=>/*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "A+bpLt",
            defaultMessage: "Hello, World #1!"
        }), []);
    return /*#__PURE__*/ React.createElement("main", {
        title: intl.formatMessage({
            id: "lyiQWH",
            defaultMessage: "Home"
        }),
        description: intl.formatMessage({
            id: "9CBSZS",
            defaultMessage: "An example app integrating React Intl with Next.js"
        })
    }, /*#__PURE__*/ React.createElement("p", null, /*#__PURE__*/ React.createElement(FormattedMessage, {
        id: "wF8i0k",
        defaultMessage: "Hello, World #2!"
    })), /*#__PURE__*/ React.createElement("p", null, anotherMessage), /*#__PURE__*/ React.createElement("div", null, [
        ...Array(10)
    ].map((_, i)=>/*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "rpH0bU",
            defaultMessage: "Hello, World #3!"
        }))), /*#__PURE__*/ React.createElement("p", null, /*#__PURE__*/ React.createElement(FormattedNumber, {
        value: 1000
    })));
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello, World #1!",
        "description": "Index Page: Content #1",
        "id": "A+bpLt",
      },
      {
        "defaultMessage": "Home",
        "description": "Index Page: document title",
        "id": "lyiQWH",
      },
      {
        "defaultMessage": "An example app integrating React Intl with Next.js",
        "description": "Index Page: Meta Description",
        "id": "9CBSZS",
      },
      {
        "defaultMessage": "Hello, World #2!",
        "description": "Index Page: Content #2",
        "id": "wF8i0k",
      },
      {
        "defaultMessage": "Hello, World #3!",
        "description": "Index Page: Content #3",
        "id": "rpH0bU",
      },
    ],
    "meta": {},
  },
}
`;

exports[`no pragma preserveWhitespace 1`] = `
{
  "code": "// @react-intl project:amazing
import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
const msgs = defineMessages({
    header: {
        id: 'foo.bar.baz',
        defaultMessage: "Hello World!"
    },
    content: {
        id: 'foo.bar.biff',
        defaultMessage: "Hello Nurse!"
    },
    kittens: {
        id: 'app.home.kittens',
        defaultMessage: "{count, plural, =0 {😭} one {# kitten} other {# kittens}}"
    },
    trailingWhitespace: {
        id: 'trailing.ws',
        defaultMessage: "   Some whitespace   "
    },
    escaped: {
        id: 'escaped.apostrophe',
        defaultMessage: "A quoted value ''{value}'"
    },
    newline: {
        id: 'newline',
        defaultMessage: "this is     a message"
    },
    linebreak: {
        id: 'linebreak',
        defaultMessage: "this is\\na message"
    },
    templateLinebreak: {
        id: 'templateLinebreak',
        description: \`this is
    a
    description\`,
        defaultMessage: "this is\\n    a message"
    }
});
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement("div", null, /*#__PURE__*/ React.createElement("h1", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.header)), /*#__PURE__*/ React.createElement("p", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.content)), /*#__PURE__*/ React.createElement("p", null, /*#__PURE__*/ React.createElement(FormattedMessage, msgs.kittens)), /*#__PURE__*/ React.createElement("p", null, /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "inline.linebreak",
            defaultMessage: "formatted message       with linebreak"
        })));
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "foo.bar.baz",
      },
      {
        "defaultMessage": "Hello Nurse!",
        "description": "Another message",
        "id": "foo.bar.biff",
      },
      {
        "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
        "description": "Counts kittens",
        "id": "app.home.kittens",
      },
      {
        "defaultMessage": "   Some whitespace   ",
        "description": "Whitespace",
        "id": "trailing.ws",
      },
      {
        "defaultMessage": "A quoted value ''{value}'",
        "description": "Escaped apostrophe",
        "id": "escaped.apostrophe",
      },
      {
        "defaultMessage": "this is     a message",
        "description": "this is     a     description",
        "id": "newline",
      },
      {
        "defaultMessage": "this is
a message",
        "description": "this is
a
description",
        "id": "linebreak",
      },
      {
        "defaultMessage": "this is
    a message",
        "id": "templateLinebreak",
      },
      {
        "defaultMessage": "formatted message
						with linebreak",
        "description": "foo
						bar",
        "id": "inline.linebreak",
      },
    ],
    "meta": {},
  },
}
`;

exports[`no pragma removeDefaultMessage 1`] = `
{
  "code": "import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
defineMessages({
    foo: {
        id: 'greeting-user'
    },
    foo2: {
        id: "xoMBqZ"
    },
    foo3: {
        id: "s0FUZ6"
    }
});
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement(React.Fragment, null, /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "greeting-world"
        }), /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "mdcDCs"
        }), /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "xjsqOM"
        }));
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello, {name}",
        "description": "Greeting the user",
        "id": "greeting-user",
      },
      {
        "defaultMessage": "foo2-msg",
        "description": "foo2",
        "id": "xoMBqZ",
      },
      {
        "defaultMessage": "foo3-msg",
        "id": "s0FUZ6",
      },
      {
        "defaultMessage": "Hello World!",
        "description": "Greeting to the world",
        "id": "greeting-world",
      },
      {
        "defaultMessage": "message with desc",
        "description": "desc with desc",
        "id": "mdcDCs",
      },
      {
        "defaultMessage": "message only",
        "id": "xjsqOM",
      },
    ],
    "meta": {},
  },
}
`;

exports[`no pragma skipExtractionFormattedMessage 1`] = `
{
  "code": "import React, { Component } from 'react';
import { FormattedMessage } from 'react-intl';
function nonStaticId() {
    return 'baz';
}
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: \`foo.bar.\${nonStaticId()}\`
        });
    }
}",
  "data": {
    "messages": [],
    "meta": {},
  },
}
`;

exports[`no pragma templateLiteral 1`] = `
{
  "code": "import React, { Component } from 'react';
import { FormattedMessage, defineMessage } from 'react-intl';
defineMessage({
    id: \`template\`,
    defaultMessage: "should remove newline and extra spaces"
});
export default class Foo extends Component {
    render() {
        return /*#__PURE__*/ React.createElement(FormattedMessage, {
            id: "foo.bar.baz",
            defaultMessage: \`Hello World!\`
        });
    }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "should remove newline and extra spaces",
        "id": "template",
      },
      {
        "defaultMessage": "Hello World!",
        "description": "The default message.",
        "id": "foo.bar.baz",
      },
    ],
    "meta": {},
  },
}
`;
